# waywo

./: .env.example  .gitignore  ANALYTICS_TOOL_PLAN.md  CHANGELOG.md  DEDUPLICATION_PLAN.md  DOCS_PLAN.md  Dockerfile  HN_FIREBASE_API.md  IMPROVEMENTS.md  Makefile  NDD_MILESTONES.md  NDD_PLAN.md  PLAN.md  PLAN_NEXT.md  RAG_IPYNB.md  README.md  REDIS_OM.md  SHORT_FORM_VIDEO_PLAN.md  SPEECH_TO_SPEECH_AGENT_PLAN.md  WORD_CLOUD_PLAN.md  docker-compose.yml  project_structure.html  pyproject.toml
.cursor/rules/: celery.md
.github/workflows/: docs.yml  release-please.yml
data/visualizations/: chatbot_structure.html
docs/: GITHUB_PAGES_PLAN.md  app.config.ts  nuxt.config.ts  package-lock.json  package.json
docs/content/: index.md
docs/content/10.getting-started/: 1.introduction.md  (+4 more)
frontend/: .env.example  README.md  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
narration/: .gitignore  NARRATION_PLAN.md  README.md  batch.py  generate.py  pyproject.toml  sample.py  script.txt  script_v2.txt  test_script.txt
narration/app/: db.py  main.py
narration/app/services/: audio.py  dia.py  llm.py  magpie.py  sanitize.py
narration/app/static/: index.html
narration/sample/: text.txt
nat/: Dockerfile  pyproject.toml  workflow.yml
nat/src/nat_service/: __init__.py
nim-on-gke/: .gitignore  Makefile  README.md
nim-on-gke/infra/: Pulumi.yaml  index.ts  package-lock.json  package.json  tsconfig.json
nim-on-gke/workloads/: Pulumi.yaml  index.ts  package-lock.json  package.json
notebooks/: getting_started.ipynb  ndd_test.ipynb  stt.ipynb  tts.ipynb  video_assembly.ipynb  video_director.ipynb  vis.ipynb
services/content-safety/: CONTENT_SAFETY_PLAN.md  README.md
services/embedding-service/: README.md  main.py  pyproject.toml  sample.py
services/invokeai/: README.md  flux_2_klein_invokeai_graph.json  flux_2_klein_ref_image_invokeai_graph.json  sample.py
services/rerank-service/: README.md  main.py  pyproject.toml  sample.py
services/speech-to-text/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  main.py  pyproject.toml  sample.md
services/text-to-speech/: README.md  sample.py
src/: celery_app.py  celery_beat_healthcheck.py  celery_worker_healthcheck.py  database.py  db_client.py  db_models.py  embedding_client.py  firecrawl_client.py  healthcheck.py  llm_config.py  main.py  migrate.py  migrate_redis_to_sqlite.py  models.py  nat_client.py  ndd_config.py  ndd_pipeline.py  redis_client.py  rerank_client.py  screenshot_client.py  settings.py  tasks.py  tracing.py  video_director.py  visualization.py  waywo.yml  workflow_server.py
src/agent/: __init__.py  analytics.py  engine.py  events.py  parser.py  prompts.py  tools.py
src/clients/: content_safety.py  firecrawl.py  hn.py  invokeai.py  rerank.py  stt.py  subtitles.py  tts.py  video.py
src/db/: chat.py  client.py  comments.py  database.py  migrate.py  models.py  posts.py  projects.py  search.py  stats.py  submissions.py  videos.py  voice.py
src/rag/: messages.py  retrieve.py
src/routes/: admin.py  chat.py  comments.py  generate.py  health.py  posts.py  projects.py  search.py  videos.py  voice.py  workflows.py
src/test/: conftest.py  test_analytics.py  test_clients.py  test_content_safety.py  test_data_collection.py  test_db.py  test_routes_admin.py  test_routes_comments.py  test_routes_health.py  test_routes_posts.py  test_routes_projects.py  test_routes_search.py  test_routes_videos.py  test_subtitles.py  test_url_extraction.py  test_video_assembly.py  test_video_director.py  test_video_workflow.py  test_worker_tasks.py
src/worker/: app.py  beat.py  healthcheck.py  tasks.py  video_tasks.py
src/workflows/: __init__.py  events.py  prompts.py  video_events.py  waywo_chatbot_workflow.py  waywo_project_workflow.py  waywo_video_workflow.py
(+136 files in other folders)
