[project]
name = "narration"
version = "0.1.0"
description = "Voice narration generator using TTS with voice cloning"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
package = false
