[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waywo-nat"
version = "0.1.0"
description = "NAT service for waywo project"
requires-python = ">=3.12"
dependencies = []

[project.entry-points.'nat.components']
# Placeholder for custom component registration
# waywo_tools = "nat_service.register"
